# Live-Lite

./: .coveragerc  .gitattributes  .gitignore  Data_Processor.py  ML_build_train.py  README.md  Risk_predictor.py  calorie_intake_estimate.py  environment.yml  harvard_health_scraped_data.py  obesity_risk_model.joblib  physical_activity_recommend.py  pyproject.toml  requirements.txt  setup.py  user_input_mapping.py
.github/workflows/: build_test.yml
LiveLite/: __init__.py  calorie_intake_estimate.py  harvard_health_scraped_data.py  is_obese.py  ml_build_train.py  obesity_risk_model.joblib  physical_activity_recommend.py  risk_predictor.py  test_calorie_intake_estimate.py  test_is_obese.py  user_input_mapping.py  user_inputs.csv
LiveLite/data_analysis/: __init__.py  research_analysis.py  research_write_up.md
LiveLite/project_integration/: __init__.py  common_functions.py  generate_blank_lines.py
LiveLite/recommendation_tool/: __init__.py
LiveLite/research/: __init__.py
LiveLite/streamlit_app/: Home.py  app.py
LiveLite/tests/: model_test_output.joblib  process_nhanes.csv  sample_input_model.joblib  sample_ml_input.csv  (+23 more)
Research_Analysis/: NHANES_Historical_Analysis.ipynb  NHANES_Obesity_Predictors.ipynb  create_dataset.py  research_analysis.py
docs/: Component Specification.md  Functional Specification.md  Functional-Specification.md  Milestones.md  Pylint-Disabled.md  Recommendation.md  Tech Review.pptx  Technology Reviews.pptx  components.md  use-cases.md  user-stories.md
examples/: README.md  Tool_Text_Guide.md
tests/: test_risk_predictor.py
(+96 files in other folders)
