[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "LiveLite"
version = "0.0.1"
authors = [
    {name="Parvati Jayakumar"},
    {name="Ted Liu"},
    {name="Saikripa Mohan"},
    {name="Manasa Shivappa"}
]
description = "Research and a Recommendation Tool for obesity."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'beautifulsoup4==4.12.3',
    'joblib==1.3.2',
    'matplotlib==3.8.2',
    'numpy==1.26.4',
    'pandas==2.2.1',
    'plotly==5.19.0',
    'Requests==2.31.0',
    'scikit_learn==1.4.0',
    'seaborn==0.13.2',
    'streamlit==1.31.0',
    'streamlit_extras==0.4.0',
    'plotly==5.19.0',
    'pylint==3.0.3'
]

[project.urls]
Homepage = "https://github.com/parvatijay2901/LiveLite"
Issues = "https://github.com/parvatijay2901/LiveLite/issues"